# recognition-telegram-bot

./: Dockerfile  Makefile  README.md  app-docker-compose.yml  pyproject.toml  template.env
src/: config.py  srv.py  utils.py
src/modules/: command_system.py  vk_graphic.py
src/modules/commands/: info.py  vk_audio.py  vk_graphic.py
src/modules/tg/: button_flow.py  direct_flow.py  tg.py
